android/strongswan pki

--- a/etc/phone.conf
+++ b/etc/phone.conf
@@ -6,7 +6,7 @@
 openssl_conf = openssl_def
 
 [ openssl_def ]
-engines = engine_section
+#engines = engine_section
 
 [ engine_section ]
 pkcs11 = pkcs11_section
@@ -20,19 +20,19 @@ MODULE_PATH = /usr/lib/x86_64-linux-gnu/opensc-pkcs11.so
 prompt                  = no                   # Prompt for DN
 distinguished_name      = email_dn              # DN template
 req_extensions          = email_reqext          # Desired extensions
-days	= 45
+days	= 30 
 
 [ email_dn ]
 C = US
 ST = District of Columbia
 L = Washington
 O = Company Name
-OU = Security
+OU = Signing CA
 CN = website.example
-emailAddress = me@website.example
+#emailAddress = me@website.example
 
 [ email_reqext ]
 keyUsage                = critical,digitalSignature,keyEncipherment
 extendedKeyUsage        = emailProtection,clientAuth
 subjectKeyIdentifier    = hash
-subjectAltName          = email:move
+#subjectAltName          = email:move
