--- a/etc/signing-ca.conf
+++ b/etc/signing-ca.conf
@@ -3,7 +3,7 @@
 openssl_conf = openssl_def
 
 [ openssl_def ]
-engines = engine_section
+#engines = engine_section
 
 [ engine_section ]
 pkcs11 = pkcs11_section
@@ -57,15 +57,15 @@ serial                  = $dir/ca/$ca/db/$ca.crt.srl # Serial number file
 crlnumber               = $dir/ca/$ca/db/$ca.crl.srl # CRL number file
 database                = $dir/ca/$ca/db/$ca.db # Index file
 unique_subject          = no                    # Require unique subject
-default_days            = 180                    # How long to certify for
-default_md              = sha256                # MD to use
+default_days            = 30                    # How long to certify for
+default_md              = sha512                # MD to use
 policy                  = match_pol             # Default naming policy
 email_in_dn             = no                    # Add email to cert DN
 preserve                = no                    # Keep passed DN ordering
 name_opt                = ca_default            # Subject DN display options
 cert_opt                = ca_default            # Certificate display options
 copy_extensions         = copy                  # Copy extensions from CSR
-x509_extensions         = email_ext             # Default cert extensions
+x509_extensions         = client_ext             # Default cert extensions
 default_crl_days        = 7                     # How long before next CRL
 crl_extensions          = crl_ext               # CRL extensions
 
@@ -92,7 +92,7 @@ emailAddress            = optional
 # Certificate extensions define what types of certificates the CA is able to
 # create.
 
-[ email_ext ]
+[ client_ext ]
 keyUsage                = critical,digitalSignature,keyEncipherment
 basicConstraints        = CA:false
 extendedKeyUsage        = emailProtection,clientAuth
